

gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for symbols

Most recent changes (version wise) are at the top of this file 
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-05-29  Ales Hvezda  <ahvezda@geda.seul.org>

	* local/dac08sm-1.sym: Removed a attribute which shouldn't
	  have been a floating attribute (or an attribute in general)

	* xilinx/XC95108-PC84.sym: Made the device= attribute hidden and
          added a text label (in device='s place)

	* 74/74181-1.sym: Put spaces around the ='s in the text label 
	  "A=B", since libgeda/gschem were interpreting this as a valid 
	  attribute

2000-04-21  Ales Hvezda  <ahvezda@geda.seul.org>
	
	* */*.sym: Changed all physical attributes to footprint

	* local/dac08sm-1.sym: Changed some of the attributes to be green
	
	* local/EPF10K-1.sym and altera/EPC1LC20-1.sym : Color changes and 
	  minor cosmetic updates 

	* */*.sym: Changed all pinlabel attributes to label

2000-04-16  Ales Hvezda  <ahvezda@geda.seul.org>

	* Added the contributed symbols by JM Routoure 

	* sym/national: Created new symbol library  

	* Added the contributed symbols by Luke Stras 

	* verilog/*.sym: Some how a bogus alignment field got into all these
	  symbols.  Removed it and replaced it with 0 (lower right)


2000-02-20  Ales Hvezda  <ahvezda@geda.seul.org>

	* local/ micro/: Added a four symbols created by Marcus Isaksson

	* */*.sym: Loaded and saved all symbols in gschem to get the new 
	  version and file format (text alignment change) 

	* analog/*.sym: Added pin#= attributes to a few of the symbols
	  Added missing device= attributes as well

2000-02-19  Ales Hvezda  <ahvezda@geda.seul.org>

        * README/INSTALL: Updated files to reflect next release

2000-02-08  Ales Hvezda  <ahvezda@geda.seul.org>

	* */*.sym: Removed all spaces from all device= attributes.  This is