@@ -1,0 +1,237 @@
+v 20000220
+L 100 3900 100 11100 3
+T 1400 -150 5 10 0 0 180 0
+device=DB37
+A 850 11290 150 0 110 3
+A 175 11100 75 180 -60 3
+L 1000 3740 1000 11290 3
+V 700 3900 50 3
+P 750 3900 1300 3900 1
+{
+T 1100 3950 5 8 1 1 0 0
+pin1=13
+}
+V 400 4200 50 3
+P 450 4200 1300 4200 1
+{
+T 1100 4250 5 8 1 1 0 0
+pin2=31
+}
+V 700 4500 50 3
+P 750 4500 1300 4500 1
+{
+T 1100 4550 5 8 1 1 0 0
+pin3=12
+}
+V 400 4800 50 3
+P 450 4800 1300 4800 1
+{
+T 1100 4850 5 8 1 1 0 0
+pin4=30
+}
+V 700 5100 50 3
+P 750 5100 1300 5100 1
+{
+T 1100 5150 5 8 1 1 0 0
+pin5=11
+}
+V 400 5400 50 3
+P 450 5400 1300 5400 1
+{
+T 1100 5450 5 8 1 1 0 0
+pin6=29
+}
+V 700 5700 50 3
+P 750 5700 1300 5700 1
+{
+T 1100 5750 5 8 1 1 0 0
+pin7=10
+}
+V 400 6000 50 3
+P 450 6000 1300 6000 1
+{
+T 1100 6050 5 8 1 1 0 0
+pin8=28
+}
+V 700 6300 50 3
+P 750 6300 1300 6300 1
+{
+T 1100 6350 5 8 1 1 0 0
+pin9=9
+}
+V 400 6600 50 3
+P 450 6600 1300 6600 1
+{
+T 1100 6650 5 8 1 1 0 0
+pin10=27
+}
+V 700 6900 50 3
+P 750 6900 1300 6900 1
+{
+T 1100 6950 5 8 1 1 0 0
+pin11=8
+}
+V 400 7200 50 3
+P 450 7200 1300 7200 1
+{
+T 1100 7250 5 8 1 1 0 0
+pin12=26
+}
+V 700 7500 50 3
+P 750 7500 1300 7500 1
+{
+T 1100 7550 5 8 1 1 0 0
+pin13=7
+}
+V 400 7800 50 3
+P 450 7800 1300 7800 1
+{
+T 1100 7850 5 8 1 1 0 0
+pin14=25
+}
+V 700 8100 50 3
+P 750 8100 1300 8100 1
+{
+T 1100 8150 5 8 1 1 0 0
+pin15=6
+}
+V 400 8400 50 3
+P 450 8400 1300 8400 1
+{
+T 1100 8450 5 8 1 1 0 0
+pin16=24
+}
+V 700 8700 50 3
+P 750 8700 1300 8700 1
+{
+T 1100 8750 5 8 1 1 0 0
+pin17=5
+}
+V 400 9000 50 3
+P 450 9000 1300 9000 1
+{
+T 1100 9050 5 8 1 1 0 0
+pin18=23
+}
+V 700 9300 50 3
+P 750 9300 1300 9300 1
+{
+T 1100 9350 5 8 1 1 0 0
+pin19=4
+}
+V 400 9600 50 3
+P 450 9600 1300 9600 1
+{
+T 1100 9650 5 8 1 1 0 0
+pin20=22
+}
+V 700 9900 50 3
+P 750 9900 1300 9900 1
+{
+T 1100 9950 5 8 1 1 0 0
+pin21=3
+}
+V 400 10200 50 3
+P 450 10200 1300 10200 1
+{
+T 1100 10250 5 8 1 1 0 0
+pin22=21
+}
+V 700 10500 50 3
+P 750 10500 1300 10500 1
+{
+T 1100 10550 5 8 1 1 0 0
+pin23=2
+}
+V 400 10800 50 3
+P 450 10800 1300 10800 1
+{
+T 1100 10850 5 8 1 1 0 0
+pin24=20
+}
+V 700 11100 50 3
+P 750 11100 1300 11100 1
+{
+T 1100 11150 5 8 1 1 0 0
+pin25=1
+}
+L 801 11432 138 11166 3
+T 500 11600 8 10 1 1 180 0
+uref=J?
+A 850 150 150 0 -110 3
+A 175 300 75 180 60 3
+V 700 300 50 3
+P 750 300 1300 300 1
+{
+T 1100 350 5 8 1 1 0 0
+pin1=19
+}
+V 400 600 50 3
+P 450 600 1300 600 1
+{
+T 1100 650 5 8 1 1 0 0
+pin2=37
+}
+V 700 900 50 3
+P 750 900 1300 900 1
+{
+T 1100 950 5 8 1 1 0 0
+pin3=18
+}
+V 400 1200 50 3
+P 450 1200 1300 1200 1
+{
+T 1100 1250 5 8 1 1 0 0
+pin4=36
+}
+V 700 1500 50 3
+P 750 1500 1300 1500 1
+{
+T 1100 1550 5 8 1 1 0 0
+pin5=17
+}
+V 400 1800 50 3
+P 450 1800 1300 1800 1
+{
+T 1100 1850 5 8 1 1 0 0
+pin6=35
+}
+V 700 2100 50 3
+P 750 2100 1300 2100 1
+{
+T 1100 2150 5 8 1 1 0 0
+pin7=16
+}
+V 400 2400 50 3
+P 450 2400 1300 2400 1
+{
+T 1100 2450 5 8 1 1 0 0
+pin8=34
+}
+V 700 2700 50 3
+P 750 2700 1300 2700 1
+{
+T 1100 2750 5 8 1 1 0 0
+pin9=15
+}
+V 400 3000 50 3
+P 450 3000 1300 3000 1
+{
+T 1100 3050 5 8 1 1 0 0
+pin10=33
+}
+V 700 3300 50 3
+P 750 3300 1300 3300 1
+{
+T 1100 3350 5 8 1 1 0 0
+pin11=14
+}
+L 139 234 803 8 3
+V 400 3600 50 3
+P 450 3600 1300 3600 1
+{
+T 1100 3650 5 8 1 1 0 0
+pin10=32
+}
+L 100 3900 100 300 3
+L 1000 3800 1000 100 3
