@@ -30,7 +30,7 @@ L 300 1600 1100 1600 3
 L 700 2000 700 0 3
 L 300 400 1100 400 3
 B 300 0 800 2000 3
-T 300 -200 5 10 0 1 0 0
+T 0 2000 5 10 0 1 0 0
 device=HEADER10
 P 1100 1800 1400 1800 1
 {
@@ -57,3 +57,5 @@ P 1100 200 1400 200 1
 T 1250 250 5 8 1 1 0 0
 pin6=6
 }
+T 600 2100 8 10 1 1 0 0
+uref=J?
