@@ -11,6 +11,12 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-06-19  Matt Ettus  <matt@ettus.com>
+
+	* connector/DB37-1.sym:  Added DB37
+
+	* connector/header10-1.sym:  Added uref=J?
+
 2000-05-29  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* local/dac08sm-1.sym: Removed a attribute which shouldn't
